# TrafficAssignmentApproaches

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
TrafficAssignmentApproaches/: CMakeLists.txt  TrafficAssignmentApproaches.cpp  TrafficAssignmentApproaches.h
TrafficAssignmentApproaches/include/: DataProcessor.h  Link.h  OriginDestinationPair.h  RouteBasedApproach.h  RouteBasedKrylatov2023Approach.h  RouteBasedKrylatov2023ShiftMethod.h  RouteBasedShiftMethod.h  StatisticsRecorder.h  TapasAdvancedGradientDescentAppoach.h  TapasAdvancedGradientDescentShiftMethod.h  TapasApproach.h  TapasLineSearchApproach.h  TapasLineSearchShiftMethod.h  TapasShiftMethod.h  TrafficAssignmentApproach.h
TrafficAssignmentApproaches/performance_results/: SiouxFalls_.csv
TrafficAssignmentApproaches/performance_results/Anaheim/: RouteBasedKrylatov2023.csv  TapasAdvancedGradientDescent.csv  TapasLineSearch.csv
TrafficAssignmentApproaches/performance_results/SiouxFalls/: RouteBasedKrylatov2023.csv  TapasAdvancedGradientDescent.csv  TapasLineSearch.csv
TrafficAssignmentApproaches/scripts/: dataset_processor.ipynb  graphs_plotting.ipynb
TrafficAssignmentApproaches/src/: DataProcessor.cpp  main.cpp
configs/: cnd.anaheim.ini  cnd.anaheim.toml  cnd.barcelona.ini  cnd.barcelona.toml  cnd.chicagosketch.ini  cnd.chicagosketch.toml  cnd.siouxfalls.ini  cnd.siouxfalls.toml  cnd.winnipeg.ini  cnd.winnipeg.toml  tap.anaheim.ini  tap.anaheim.toml  tap.barcelona.ini  tap.barcelona.toml  tap.chicagosketch.ini  tap.chicagosketch.toml  tap.philadelphia.toml  tap.siouxfalls.ini  tap.siouxfalls.toml  tap.winnipeg.ini  tap.winnipeg.toml
configs/comparisons/: anaheim.toml  berlincenter.toml  chicagosketch.toml  philadelphia.toml  siouxfalls.toml  sydney.toml
configs/scenarios/: anaheim.bobyqa-only.ini  anaheim.bobyqa.ini  anaheim.cobyla-then-optcond.ini  anaheim.cobyla.ini  anaheim.de-only.ini  anaheim.de-then-optcond.ini  anaheim.etalon.ini  anaheim.gd-sensitivity.ini  anaheim.gd-spsa.ini  anaheim.gd.ini  anaheim.isres-only.ini  anaheim.optcond-only.ini  anaheim.optcond-then-cobyla.ini  anaheim.optcond.ini  anaheim.pso-only.ini  barcelona.bobyqa.ini  barcelona.cobyla.ini  barcelona.etalon.ini  barcelona.gd.ini  barcelona.optcond.ini  siouxfalls.bobyqa-only.ini  siouxfalls.bobyqa-then-optcond.ini  siouxfalls.bobyqa.ini  siouxfalls.cobyla-only.ini  siouxfalls.cobyla-then-optcond.ini  siouxfalls.cobyla.ini  siouxfalls.de-only.ini  siouxfalls.de-then-optcond.ini  siouxfalls.etalon.ini  siouxfalls.gd-only.ini  siouxfalls.gd-sensitivity.ini  siouxfalls.gd-spsa.ini  siouxfalls.gd-then-optcond.ini  siouxfalls.gd.ini  siouxfalls.isres-only.ini  siouxfalls.isres-then-optcond.ini  siouxfalls.optcond-only.ini  siouxfalls.optcond-then-cobyla.ini  siouxfalls.pso-only.ini
include/: DataProcessor.h  DemandBasedApproach.h  Link.h  OriginDestinationPair.h  PumpOutDemandBasedApproach.h  RouteBasedApproach.h  RouteBasedKrylatov2023ShiftMethod.h  StatisticsRecorder.h  TapasAdvancedGradientDescentApproach.h  TapasLineSearchShiftMethod.h  TapasNewtonStepShiftMethod.h  TapasShiftMethod.h  TrafficAssignmentApproach.h
include/cnd/: BilevelCND.h  CndOptimizationContext.h  CndStatisticsRecorder.h  DirectedConstraintLoader.h  OptimalitySensitivity.h  OptimizationPipeline.h  OptimizationStep.h  OptimizationStepFactory.h
include/cnd/sensitivity/: OptimalitySensitivity.h
include/cnd/steps/: GradientDescentStep.h  GradientEstimator.h  NloptOptimizationStep.h  OptimalityConditionStep.h  OptimlibOptimizationStep.h  SensitivityEstimator.h
include/cnd/steps/gradient_estimators/: FiniteDifferenceEstimator.h  GradientEstimator.h  SPSAEstimator.h  SensitivityEstimator.h
include/common/: ConfigUtils.h  TomlConfigLoader.h
include/tap/algorithms/: TrafficAssignmentApproach.h
include/tap/algorithms/common/: TrafficAssignmentApproach.h
include/tap/algorithms/demand_based/: PumpOutDemandBasedApproach.h
include/tap/algorithms/route_based/: RouteBasedApproach.h  RouteBasedNewtonStepShiftMethod.h  RouteBasedShiftMethod.h  RouteBasedShiftMethodFactory.h
include/tap/algorithms/route_based/components/: RouteBasedKrylatov2023ShiftMethod.h  (+2 more)
include/tap/algorithms/tapas/: BushData.h  CycleRemoval.h  PasManager.h  TapasApproach.h
include/tap/algorithms/tapas_based/: TapasApproach.h  TapasShiftMethodFactory.h
include/tap/core/: Network.h  NetworkBuilder.h  NetworkMetrics.h
include/tap/data/: Link.h  LinkCostAggregation.h  OriginDestinationPair.h
include/tap/utils/: DataProcessor.h  StatisticsRecorder.h
include/traffic_assignment/algorithms/: PumpOutDemandBasedApproach.h  RouteBasedApproach.h  RouteBasedKrylatov2023Approach.h  RouteBasedKrylatov2023ShiftMethod.h  RouteBasedShiftMethod.h  TapasAdvancedGradientDescentShiftMethod.h  TapasApproach.h  TapasLineSearchApproach.h  TapasNewtonStepApproach.h  TapasShiftMethod.h  TrafficAssignmentApproach.h
include/traffic_assignment/algorithms/common/: TrafficAssignmentApproach.h
include/traffic_assignment/algorithms/demand_based/: PumpOutDemandBasedApproach.h
include/traffic_assignment/algorithms/route_based/: RouteBasedApproach.h  RouteBasedKrylatov2023Approach.h  RouteBasedShiftMethodFactory.h
include/traffic_assignment/algorithms/tapas_based/: TapasAdvancedGradientDescentApproach.h  TapasApproach.h  TapasLineSearchApproach.h  TapasNewtonStepApproach.h  TapasShiftMethodFactory.h
include/traffic_assignment/core/: Network.h  NetworkBuilder.h
include/traffic_assignment/data/: Link.h  OriginDestinationPair.h
include/traffic_assignment/utils/: DataProcessor.h  StatisticsRecorder.h
scripts/: analyze_cndp_results.py  analyze_optimality.py  cnd_constraints.ipynb  cnd_metrics_plotting.ipynb  cnd_short_comparison_analysis.ipynb  dataset_processor.ipynb  generate_constraints.py  graphs_plotting.ipynb  plot_cndp_comparison.py  run_5min_cnd_comparison.ps1  run_cndp_comparison.py  run_experiment.py  run_short_cnd_comparison.ps1  run_siouxfalls_etalon.ps1
src/: .gitignore  cndp_solver.cpp  main.cpp  tap_main.cpp  tap_solver.cpp
(+11 files in other folders)
